--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^4.0.0",
     "http-errors": "^1.8.0",
@@ -23,6 +22,7 @@
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "sequelize-cli": "^6.2.0"
   }
 }
